--- a/FlexTemplate.PresentationLayer/WebServices/Home/Places/Index.cshtml
+++ b/FlexTemplate.PresentationLayer/WebServices/Home/Places/Index.cshtml
@@ -7,7 +7,7 @@
             <div class="home-search-form">
                 <form asp-controller="Home" asp-action="Places">
                     <div class="form-group location-form">
-                        <input name="input" type="text" class="form-control">
+                        <input id="placesSearchTextbox" name="input" type="text" class="form-control">
                     </div>
                     <button onclick="this.form.submit()" class="btn btn-primary btn-form">Знайти</button>
                 </form>
