--- a/FlexTemplate.PresentationLayer/WebServices/Components/PlaceLocation/Default.cshtml
+++ b/FlexTemplate.PresentationLayer/WebServices/Components/PlaceLocation/Default.cshtml
@@ -1,13 +1,12 @@
-﻿@model FlexTemplate.Entities.Place
+﻿@model FlexTemplate.PresentationLayer.WebServices.Components.PlaceLocation.ViewModel
 <div id="detail-content-sticky-nav-04" class="detail-content-section clearfix">
 
     <div class="section-title-02">
         <h3><span>Location</span></h3>
     </div>
-    <!--<div id="map-simple" data-lon="@Model.Longitude.ToString("0.00", System.Globalization.CultureInfo.InvariantCulture)" data-lat="@Model.Latitude.ToString("0.00", System.Globalization.CultureInfo.InvariantCulture)"class="map-submit mb-40"></div>-->
     <div class="map-holder">
 
-        <div id="hotel-detail-map" data-lat="@Model.Latitude.ToString("0.00", System.Globalization.CultureInfo.InvariantCulture)" data-lon="@Model.Longitude.ToString("0.00", System.Globalization.CultureInfo.InvariantCulture)" style="width: 100%; height: 480px;"></div>
+        <div id="hotel-detail-map" data-lat="@Model.Latitude" data-lon="@Model.Longitude" style="width: 100%; height: 480px;"></div>
 
         <div class="infobox-wrapper">
             <div id="infobox">
