--- a/FlexTemplate.PresentationLayer/WebServices/Components/PlacePhoto/Default.cshtml
+++ b/FlexTemplate.PresentationLayer/WebServices/Components/PlacePhoto/Default.cshtml
@@ -1,7 +1,7 @@
 ﻿<div id="detail-content-sticky-nav-03" class="detail-content-section clearfix">
 
     <div class="section-title-02">
-        <h3><span>Photo</span></h3>
+        <h3><span>Фотографії</span></h3>
     </div>
 
     <div id="detail-food-photo"></div>
@@ -9,10 +9,3 @@
     <div class="clear mb-15"></div>
     
 </div>
-
-<!--<form method="post" asp-action="Upload" asp-controller="Upload" enctype="multipart/form-data">
-    <div id="file-submit" class="dropzone">
-        <input type="file">
-        <div class="dz-default dz-message"><span>Завантажити ще..</span></div>
-    </div>
-</form>-->
