--- a/FlexTemplate.PresentationLayer/WebServices/Components/PlaceReviews/Default.cshtml
+++ b/FlexTemplate.PresentationLayer/WebServices/Components/PlaceReviews/Default.cshtml
@@ -1,4 +1,4 @@
-﻿@using FlexTemplate.Entities
+﻿@model FlexTemplate.PresentationLayer.WebServices.Components.PlaceReviews.ViewModel
 <div id="detail-content-sticky-nav-02" class="detail-content-section clearfix">
 
     <div class="section-title-02">
@@ -6,138 +6,18 @@
     </div>
 
     <div class="review-wrapper">
-
-        <!--<div class="review-header">
-
-            <div class="GridLex-gap-30">
-
-                <div class="GridLex-grid-middle">
-
-                    <div class="GridLex-col-4_sm-5_xs-12">
-
-                        <div class="average-score">
-
-                            <div class="progress-radial progress-radial-md progress-80">
-                                <div class="overlay">
-                                    <div class="progress-radial-inner">
-                                        <div class="caption">
-
-                                            <p class="number">8.0</p>
-
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="texting">
-
-                                <h6>Very good</h6>
-                                <a href="#">(based on 10575 reviews)</a>
-
-                            </div>
-
-                        </div>
-
-                    </div>
-
-                    <div class="GridLex-col-8_sm-7_xs-12">
-
-                        <div class="item-score clearfix">
-
-                            <ul class="item-score-list">
-
-                                <li>
-
-                                    <div class="progress-radial progress-radial-sm progress-80">
-                                        <div class="overlay">
-                                            <div class="progress-radial-inner">
-                                                <div class="caption">
-
-                                                    <p class="number">8.0</p>
-
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <p class="text-center">Quality of food</p>
-
-                                </li>
-
-                                <li>
-
-                                    <div class="progress-radial progress-radial-sm progress-80">
-                                        <div class="overlay">
-                                            <div class="progress-radial-inner">
-                                                <div class="caption">
-
-                                                    <p class="number">8.0</p>
-
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <p class="text-center">Level of service</p>
-
-                                </li>
-
-                                <li>
-
-                                    <div class="progress-radial progress-radial-sm progress-80">
-                                        <div class="overlay">
-                                            <div class="progress-radial-inner">
-                                                <div class="caption">
-
-                                                    <p class="number">8.0</p>
-
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <p class="text-center">Likely to recommend</p>
-
-                                </li>
-
-                                <li>
-
-                                    <div class="progress-radial progress-radial-sm progress-80">
-                                        <div class="overlay">
-                                            <div class="progress-radial-inner">
-                                                <div class="caption">
-
-                                                    <p class="number">8.0</p>
-
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <p class="text-center">Worth to eat</p>
-
-                                </li>
-
-                            </ul>
-
-                        </div>
-
-                    </div>
-
-                </div>
-
-            </div>
-
-        </div>-->
         
         <div class="review-item-wrapper">
             
             <ul class="review-item-list">
-                @foreach (PlaceReview review in Model.Place.Reviews)
+                @foreach (var review in Model.Reviews)
                 {
-                    @await Component.InvokeAsync("ThisPlaceReview", new { item = review })
-                    ;
+                    @await Component.InvokeAsync(typeof(FlexTemplate.PresentationLayer.WebServices.Components.PlaceReview.PlaceReview), new { reviewId = review });
                 }
             </ul>
             <h4>Додати коментар</h4>
 
-            <form method="post" id="contactForm" asp-controller="Home" asp-action="NewPlaceReview" asp-route-placeid="@Model.Place.Id" class="comment-form">
+            <form method="post" id="contactForm" asp-controller="Home" asp-action="NewPlaceReview" asp-route-placeid="@Model.PlaceId" class="comment-form">
 
                 <div class="clear"></div>
                 <div class="row">
