--- a/FlexTemplate.PresentationLayer/WebServices/Components/BlogsFeed/Default.cshtml
+++ b/FlexTemplate.PresentationLayer/WebServices/Components/BlogsFeed/Default.cshtml
@@ -1,55 +1,60 @@
-﻿@model BlogsFeedViewModel
-
+﻿@model FlexTemplate.PresentationLayer.WebServices.Components.BlogsFeed.ViewModel
 <div class="col-sm-4 col-md-3 col-xs-12">
-
     <aside class="sidebar-wrapper for-blog">
-        <form asp-action="Blogs">
-            <div class="sidebar-module">
-                <div class="sidebar-module-inner">
-                    <div class="sidebar-mini-search">
-                        <div class="input-group">
-
+        <div class="sidebar-module">
+            <div class="sidebar-module-inner">
+                <div class="sidebar-mini-search">
+                    <div class="input-group">
+                        <form asp-action="Blogs">
                             <input type="text" class="form-control" name="input" placeholder="Шукати...">
                             <span class="input-group-btn">
                                 <button onclick="this.form.submit();" class="btn btn-primary" type="button"><i class="fa fa-search"></i></button>
                             </span>
-
-                        </div>
+                        </form>
                     </div>
                 </div>
             </div>
-        </form>
+        </div>
         <div class="clear"></div>
-
+        <div class="section-title-02">
+            <h4><span>Категорії</span></h4>
+        </div>
+        <div class="sidebar-module clearfix">
+            <ul class="sidebar-category">
+                @foreach (var category in Model.Categories)
+                {
+                    <li>
+                        <a href="@Url.Action("Blogs", "Home", new {input = Model.Input, tags = Model.TagsIds, categories = category.WithoutThisIds, currentPage = Model.CurrentPage})">
+                            @category.Caption<span>(@category.BlogsCount)</span>
+                        </a>
+                    </li>
+                }
+            </ul>
+        </div>
         <div class="section-title-02">
             <h4><span>Теги</span></h4>
         </div>
-
         <div class="sidebar-module clearfix">
-
-            <ul class="sidebar-category">
+            <div class="tag-cloud clearfix">
                 @foreach (var tag in Model.Tags)
                 {
-                    <li><a asp-controller="Home" asp-action="Blogs" asp-route-tag="@tag.Id">@tag.Caption<span>(@tag.BlogsCount)</span></a></li>
+                    <a href="@Url.Action("Blogs", "Home", new {input = Model.Input, tags = tag.WithoutThisIds, categories = Model.CategoriesIds, currentPage = Model.CurrentPage})" class="tag-item">
+                        @tag.Name
+                    </a>
                 }
-            </ul>
-
+            </div>
         </div>
-
         <div class="section-title-02">
             <h4><span>Останні повідомлення</span></h4>
         </div>
-
         <div class="sidebar-module clearfix">
-
             <ul class="sidebar-post">
                 @foreach (var blog in Model.LatestBlogs)
                 {
                     <li class="clearfix">
-
                         <a asp-controller="Home" asp-action="Blog" asp-route-id="@blog.Id">
                             <div class="image">
-                                <img src="../../Resources/Blogs/@(blog.Id)/head.jpg" alt="image" onerror="this.onerror = null; this.src = '../../Resources/Defaults/blog.jpg';" />
+                                <img src="@blog.HeadPhotoPath" alt="image" onerror="this.onerror = null; this.src = '../../Resources/Defaults/blog.jpg';" />
                             </div>
                             <div class="content">
                                 <h6>@blog.Caption</h6>
@@ -61,24 +66,18 @@
                     </li>
                 }
             </ul>
-
-
         </div>
-
         <div class="section-title-02">
             <h4><span>Популярні повідомлення</span></h4>
         </div>
-
         <div class="sidebar-module clearfix">
-
             <ul class="sidebar-post">
-                @foreach (BlogsFeedItem blog in Model.Blogs)
+                @foreach (var blog in Model.Blogs)
                 {
-
                     <li class="clearfix">
                         <a asp-controller="Home" asp-action="Blog" asp-route-id="@blog.Id">
                             <div class="image">
-                                <img src="../../Resources/Blogs/@(blog.Id)/head.jpg" alt="image" onerror="this.onerror = null; this.src = '../../Resources/Defaults/blog.jpg';" />
+                                <img src="@blog.HeadPhotoPath" alt="image" onerror="this.onerror = null; this.src = '../../Resources/Defaults/blog.jpg';" />
                             </div>
                             <div class="content">
                                 <h6>@blog.Caption</h6>
@@ -88,10 +87,7 @@
                     </li>
                 }
             </ul>
-
-
         </div>
-
         @*<div class="section-title-02">
             <h4><span>Архів</span></h4>
         </div>
@@ -105,21 +101,6 @@
                 <li><a href="#">April 2015<span>(157)</span></a></li>
                 <li><a href="#">June 2015<span>(87)</span></a></li>
             </ul>
-
-        </div>
-
-        <div class="section-title-02">
-            <h4><span>Теги</span></h4>
-        </div>
-
-        <div class="sidebar-module clearfix">
-
-            <div class="tag-cloud clearfix">
-                <a href="#" class="tag-item">HTML5</a> <a href="#" class="tag-item">CSS3</a> <a href="#" class="tag-item">jQuery</a>
-                <a href="#" class="tag-item">Creative</a> <a href="#" class="tag-item">Design</a> <a href="#" class="tag-item">iOS</a>
-                <a href="#" class="tag-item">Android</a> <a href="#" class="tag-item">Video</a> <a href="#" class="tag-item">Markup</a>
-                <a href="#" class="tag-item">Programming</a> <a href="#" class="tag-item">SEO</a>
-            </div>
 
         </div>
 
@@ -156,7 +137,5 @@
                 <li><a href="#">WordPress.org</a></li>
             </ul>
         </div>*@
-
-
     </aside>
 </div>
