--- a/FlexTemplate.PresentationLayer/WebServices/Home/NewPlace/Index.cshtml
+++ b/FlexTemplate.PresentationLayer/WebServices/Home/NewPlace/Index.cshtml
@@ -1,20 +1,15 @@
-﻿@model IEnumerable<FlexTemplate.Entities.Category>
+﻿@model FlexTemplate.PresentationLayer.WebServices.Home.NewPlace.ViewModel
 <!-- start Main Wrapper -->
 <div class="main-wrapper scrollspy-container">
     <!-- start hero-header -->
-    <div class="hero hero-breadcrumb" style="background-image:url('../../images/hero-header/03.jpg');">
+    <div class="hero hero-breadcrumb" style="background-image:url('@Model.BannerPhotoPath');">
         <div class="container">
             <h1>Додати ресторан</h1>
             <p>Додати ресторан</p>
         </div>
     </div>
     <div class="container pt-10 pb-30">
-        <div class="breadcrumb-wrapper">
-            <ol class="breadcrumb">
-                <li><a asp-action="Index">Головна</a></li>
-                <li class="active">Додати ресторан</li>
-            </ol>
-        </div>
+        @await Component.InvokeAsync(typeof(FlexTemplate.PresentationLayer.WebServices.Components.Breadcrumbs.Breadcrumbs))
         <div class="row mt-40 mb-30">
             <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2">
                 <!--<div class="notify-box">
@@ -120,7 +115,7 @@
                                 <div class="col-xs-12 col-sm-12 col-md-12">
                                     <label class="block">Категорії</label>
                                 </div>
-                                @foreach (FlexTemplate.Entities.Category category in Model)
+                                @foreach (var category in Model.Categories)
                                 {
                                     <div class="col-xs-12 col-sm-4">
                                         <div class="checkbox-block font-icon-checkbox">
@@ -491,21 +486,20 @@
                                 </div>
                             </div>
                         </div>
-                        @{ var uid = Guid.NewGuid().ToString();}
                         <div class="submite-list-box">
                             <div id="place-head-update" class="dropzone">
                                 <input type="file">
-                                <input class="file_descriptor" type="hidden" value="@uid"/>
+                                <input class="file_descriptor" type="hidden" value="@Model.NewPlaceGuid"/>
                                 <div class="dz-default dz-message"><span>Головна фотографія</span></div>
                             </div>
                             <div id="place-banner-update" class="dropzone">
                                 <input type="file">
-                                <input class="file_descriptor" type="hidden" value="@uid" />
+                                <input class="file_descriptor" type="hidden" value="@Model.NewPlaceGuid" />
                                 <div class="dz-default dz-message"><span>Баннер</span></div>
                             </div>
                             <div id="new-place" class="dropzone">
                                 <input name="files" type="file" multiple>
-                                <input class="file_descriptor" type="hidden" name="uid" value="@uid" />
+                                <input class="file_descriptor" type="hidden" name="uid" value="@Model.NewPlaceGuid" />
                                 <div class="dz-default dz-message"><span>Фотографії галереї</span></div>
                             </div>
                         </div>
